[tool.poetry]
name = "umsgpack"
version = "0.1.0"
description = ""
authors = ["Bernard Greyling <bernard@rampgrowth.com>"]
readme = "README.md"
packages = [{include = "umsgpack"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
